Fix event click on schedule button on mobile

--- a/src/components/organisms/UpcomingAppointment/styles.module.scss
+++ b/src/components/organisms/UpcomingAppointment/styles.module.scss
@@ -160,7 +160,7 @@
   }
 }
 
-.scheduleButton {
+.upcomingAppointment .scheduleButton {
   font-family: "Libre Franklin";
   font-style: normal;
   font-weight: 600;
@@ -173,6 +173,9 @@
   /* Grayscale/ White */
 
   color: #ffffff;
+  @media (max-width: 992px) {
+    margin-top: 18px;
+  }
 }
 
 .noAppointmentTitleText {
